<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick1"
                android:text="@string/first"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position1_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name1_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn2_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick2"
                android:text="@string/second"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position2_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name2_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn3_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick3"
                android:text="@string/third"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position3_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name3_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick4"
                android:text="@string/fourth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position4_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name4_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn5_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick5"
                android:text="@string/fifth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position5_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name5_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn6_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick6"
                android:text="@string/sixth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position6_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name6_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn7_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick7"
                android:text="@string/seventh"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position7_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name7_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn8_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick8"
                android:text="@string/eighth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position8_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name8_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn9_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClick9"
                android:text="@string/ninth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position9_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name9_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnP_dh"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:background="@drawable/button_custom"
                android:onClick="onClickP"
                android:text="@string/pitcher"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/positionP_dh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/pitcher_text"
                android:textColor="#ff0066"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameP_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/unselected"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>